# ai-video-summarizer

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.trae/documents/: Create Extensible AI Video Summarizer.md
scripts/: test_transcript_bili.py
src/: cli.py  config.py
src/core/: video.py
src/models/: summary.py  transcript.py  video.py
src/prompts/: map.jinja2  reduce.jinja2  study.jinja2
src/providers/: bilibili.py  youtube.py
src/services/: summarizer.py
src/utils/: cache.py  chunker.py  cookies.py  keyframes.py  logger.py  retry.py
tests/: test_basic.py
