[project]
name = "ai-video-summarizer"
version = "0.1.0"
description = "High-quality AI video summarizer for YouTube and Bilibili"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "openai>=2.15.0",
    "openai-whisper>=20250625",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp==2025.12.8",
]

[project.scripts]
ai-video-summarizer = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
